--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,9 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
-    "zod": "^3.21.4",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -34,6 +34,8 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
@@ -43,5 +45,3 @@
     "typescript": "^5.1.6"
   }
 }
-
-
