--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,6 +32,12 @@
       ],
       "@/providers/*": [
         "./providers/*"
+      ],
+      "@/stores/*": [
+        "./stores/*"
+      ],
+      "@/styles/*": [
+        "./styles/*"
       ]
     },
     "types": [],
