--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-query-devtools": "^5.51.21",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "lucide-react": "^0.441.0",
     "next": "^14.2.5",
@@ -26,8 +27,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.0",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
