--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "tailwind-scrollbar": "^1.3.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
