--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,9 @@
 ﻿PORT=3001
-DATABASE_URL="postgresql://postgres:your_password@localhost:5432/calendar_shift_db"
+
+# Database URL with connection pooling parameters
+# connection_limit: Maximum number of connections in the pool (default: num_cpus * 2 + 1)
+# pool_timeout: Maximum time (in seconds) to wait for a connection (default: 10)
+DATABASE_URL="postgresql://postgres:your_password@localhost:5432/calendar_shift_db?connection_limit=20&pool_timeout=30"
+
 JWT_SECRET="your_super_secret_key_for_jwt"
 NODE_ENV="development"
