--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,6 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -43,8 +41,10 @@
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
     "supertest": "^6.3.3",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "yaml": "^2.8.1"
   }
 }
