--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
+    "uuid": "^13.0.0",
+    "winston": "^3.18.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
