--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "db:studio": "prisma studio",
+    "docs:postman": "node scripts/generate-postman-collection.js",
     "postinstall": "tsc && prisma generate"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
+    "swagger-jsdoc": "^6.2.8",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "zod": "^3.21.4"
