--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "generate:types": "openapi-typescript http://localhost:3001/api/docs/swagger.json -o src/generated/api.types.ts",
+    "generate:types:prod": "openapi-typescript $BACKEND_URL/api/docs/swagger.json -o src/generated/api.types.ts",
+    "prebuild": "npm run generate:types || echo 'Warning: Could not generate types. Backend may not be running.'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -61,6 +64,7 @@
     "eslint-config-next": "14.1.0",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "openapi-typescript": "^7.4.0",
     "postcss": "^8",
     "tailwind-scrollbar": "^1.3.2",
     "tailwindcss": "^3.3.0",
